exports[`<app /> snapshot 1`] = `
<div
  className="app">
  <svg
    className="svgOnload">
    <defs>
      <linearGradient
        id="orange_red"
        x1="0%"
        x2="0%"
        y1="0%"
        y2="100%">
        <stop
          offset="0%"
          style={
            Object {
              "stopColor": "rgb(0,216,255)",
              "stopOpacity": 1,
            }
          } />
        <stop
          offset="100%"
          style={
            Object {
              "stopColor": "rgb(0,192,255)",
              "stopOpacity": 1,
            }
          } />
      </linearGradient>
    </defs>
    <symbol
      id="logo">
      <path
        d="M100,3C46.428,3,3,46.428,3,100s43.428,97,97,97s97-43.428,97-97S153.572,3,100,3z M96.869,41.074 c3.489-3.489,5.68-16.123,5.68-16.123s1.988,12.35,5.72,16.082c3.732,3.733,16.082,5.721,16.082,5.721s-12.471,2.029-16.123,5.68 c-3.651,3.651-5.68,16.123-5.68,16.123s-2.191-12.634-5.68-16.123c-3.489-3.489-16.123-5.68-16.123-5.68S93.38,44.563,96.869,41.074 z M14.829,86.988c0,0,24.676-4.279,31.491-11.094c6.815-6.815,11.094-31.491,11.094-31.491s3.883,24.122,11.173,31.412 S100,86.988,100,86.988S75.641,90.95,68.509,98.082c-7.132,7.132-11.094,31.491-11.094,31.491s-4.279-24.676-11.094-31.491 C39.506,91.267,14.829,86.988,14.829,86.988z M135.424,87.877c-2.401,26.318,6.978,80.141,6.978,80.141 c-8.124,5.312-24.398,13.068-40.986,13.012c17.286-23.264,16.624-55.598,16.624-55.598c-8.675,27.996-31.975,53.823-31.975,53.823 c-28.65-5.718-46.331-27.602-46.331-27.602s44.789,2.169,71.208-52.246c23.264-56.386,52.345-49.19,52.837-48.894 C144.853,60.372,137.116,75.17,135.424,87.877z "
        fill="url(#orange_red)" />
    </symbol>
  </svg>
  <div
    className="header clearfix">
    <div
      className="header-left clearfix">
      <svg
        className="logo">
        <use
          height="200"
          transform="scale(0.19,0.19)"
          viewBox="0 0 38 38"
          width="200"
          x="0"
          xlinkHref="#logo"
          y="0" />
      </svg>
      <span
        className="tit">
        Star
      </span>
    </div>
    <div
      className="user-center ">
      <div
        className="user-icon clearfix">
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-user" />
      </div>
      <ul
        className="user-list">
        <li
          onClick={[Function]}>
          <span
            className="icon_password" />
          <span>
            update.password
          </span>
        </li>
        <li
          onClick={[Function]}>
          <span
            className="icon_exit" />
          <span>
            exit
          </span>
        </li>
      </ul>
    </div>
    <div
      className="language-switch ">
      <div
        className="language-icon">
        <span
          className="icon_chinese" />
      </div>
      <ul
        className="list-group">
        <li
          className="list-group-item"
          onClick={[Function]}>
          <span
            className="icon_chinese" />
          <span>
            简体中文
          </span>
        </li>
        <li
          className="list-group-item"
          onClick={[Function]}>
          <span
            className="icon_english" />
          <span>
            ENGLISH
          </span>
        </li>
      </ul>
    </div>
    <div
      className="header-right clearfix">
      <span
        className="name" />
    </div>
  </div>
  <div
    className="cont">
    <ul
      className="clearfix">
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-asset">
            <div
              className="ico">
              <span
                className="icon icon-asset" />
            </div>
            <div
              className="title" />
          </div>
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-permission">
            <div
              className="ico">
              <span
                className="icon icon-permission" />
            </div>
            <div
              className="title" />
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="overlayer "
    onClick={[Function]}>
    <div
      className=""
      id="animate" />
  </div>
</div>
`;

exports[`<app /> snapshot with props.title=undefined, props.name=undefined 1`] = `
<div
  className="app">
  <svg
    className="svgOnload">
    <defs>
      <linearGradient
        id="orange_red"
        x1="0%"
        x2="0%"
        y1="0%"
        y2="100%">
        <stop
          offset="0%"
          style={
            Object {
              "stopColor": "rgb(0,216,255)",
              "stopOpacity": 1,
            }
          } />
        <stop
          offset="100%"
          style={
            Object {
              "stopColor": "rgb(0,192,255)",
              "stopOpacity": 1,
            }
          } />
      </linearGradient>
    </defs>
    <symbol
      id="logo">
      <path
        d="M100,3C46.428,3,3,46.428,3,100s43.428,97,97,97s97-43.428,97-97S153.572,3,100,3z M96.869,41.074 c3.489-3.489,5.68-16.123,5.68-16.123s1.988,12.35,5.72,16.082c3.732,3.733,16.082,5.721,16.082,5.721s-12.471,2.029-16.123,5.68 c-3.651,3.651-5.68,16.123-5.68,16.123s-2.191-12.634-5.68-16.123c-3.489-3.489-16.123-5.68-16.123-5.68S93.38,44.563,96.869,41.074 z M14.829,86.988c0,0,24.676-4.279,31.491-11.094c6.815-6.815,11.094-31.491,11.094-31.491s3.883,24.122,11.173,31.412 S100,86.988,100,86.988S75.641,90.95,68.509,98.082c-7.132,7.132-11.094,31.491-11.094,31.491s-4.279-24.676-11.094-31.491 C39.506,91.267,14.829,86.988,14.829,86.988z M135.424,87.877c-2.401,26.318,6.978,80.141,6.978,80.141 c-8.124,5.312-24.398,13.068-40.986,13.012c17.286-23.264,16.624-55.598,16.624-55.598c-8.675,27.996-31.975,53.823-31.975,53.823 c-28.65-5.718-46.331-27.602-46.331-27.602s44.789,2.169,71.208-52.246c23.264-56.386,52.345-49.19,52.837-48.894 C144.853,60.372,137.116,75.17,135.424,87.877z "
        fill="url(#orange_red)" />
    </symbol>
  </svg>
  <div
    className="header clearfix">
    <div
      className="header-left clearfix">
      <svg
        className="logo">
        <use
          height="200"
          transform="scale(0.19,0.19)"
          viewBox="0 0 38 38"
          width="200"
          x="0"
          xlinkHref="#logo"
          y="0" />
      </svg>
      <span
        className="tit">
        StarRiver
      </span>
    </div>
    <div
      className="user-center ">
      <div
        className="user-icon clearfix">
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-user" />
      </div>
      <ul
        className="user-list">
        <li
          onClick={[Function]}>
          <span
            className="icon_password" />
          <span>
            update.password
          </span>
        </li>
        <li
          onClick={[Function]}>
          <span
            className="icon_exit" />
          <span>
            exit
          </span>
        </li>
      </ul>
    </div>
    <div
      className="language-switch ">
      <div
        className="language-icon">
        <span
          className="icon_chinese" />
      </div>
      <ul
        className="list-group">
        <li
          className="list-group-item"
          onClick={[Function]}>
          <span
            className="icon_chinese" />
          <span>
            简体中文
          </span>
        </li>
        <li
          className="list-group-item"
          onClick={[Function]}>
          <span
            className="icon_english" />
          <span>
            ENGLISH
          </span>
        </li>
      </ul>
    </div>
    <div
      className="header-right clearfix">
      <span
        className="name" />
    </div>
  </div>
  <div
    className="cont">
    <ul
      className="clearfix">
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-asset">
            <div
              className="ico">
              <span
                className="icon icon-asset" />
            </div>
            <div
              className="title" />
          </div>
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-permission">
            <div
              className="ico">
              <span
                className="icon icon-permission" />
            </div>
            <div
              className="title" />
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="overlayer "
    onClick={[Function]}>
    <div
      className=""
      id="animate" />
  </div>
</div>
`;
